--- a/src/main/resources/static/css/pages/user/item-detail.css
+++ b/src/main/resources/static/css/pages/user/item-detail.css
@@ -1,14 +1,14 @@
 .item__container{
     display:flex;
-    width: 100%;
+    width: 1060px;
+    padding: 6rem 0 2rem 2rem;
     justify-content: space-between;
     height: 45rem;
-    padding: 6rem 15rem 0 15rem;
     gap:2rem;
 }
-.item-detail__container{
-    width: 100%;
-    padding: 0 15rem 2rem 15rem;
+.item-detail__container,.item__nav-container{
+    width: 1060px;
+    padding: 2rem 0;
 }
 .item__img{
     width: 45%;
@@ -69,10 +69,7 @@
     font-size: 0.8rem;
     color: var(--color-primary-variant);
 }
-.item__nav-container{
-    width: 100%;
-    padding: 2rem 15rem 1rem 15rem;
-}
+
 .item__navs{
     display: flex;
     justify-content: space-around;
@@ -136,4 +133,64 @@
 .item__countbtns--cart{
     width: 60%;
     height: 60%;
+}
+
+@media screen and (max-width: 1140px) {
+    .item__container{
+        width: 800px;
+        padding: 6rem 0 2rem 4rem;
+        height: 40rem;
+        gap:1rem;
+    }
+    .item-detail__container,.item__nav-container{
+        width: 700px;
+        padding: 2rem 0;
+    }
+
+    .btn--purchase{
+        position: relative;
+    }
+    .btn--item-detail{
+        font-size: 0.75rem;
+    }
+
+    .table__client{
+        font-size: 0.75rem;
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    .item__container{
+        width: 700px;
+        padding: 6rem 0 2rem 4rem;
+    }
+    .item-detail__container,.item__nav-container{
+        width: 580px;
+        padding: 2rem 0;
+    }
+    .items__page{
+        padding: 0 5rem;
+    }
+    .btn--item-detail{
+        font-size: 0.7rem;
+    }
+    .btn--purchase{
+        position: relative;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .item__container{
+        width:300px;
+        flex-direction: column;
+    }
+    .item-detail__container,.item__nav-container{
+        width: 580px;
+        padding: 2rem 0;
+    }
+    .item__img{
+        width: 300px;
+    }
+
 }
