--- a/src/main/resources/templates/members/member-info.html
+++ b/src/main/resources/templates/members/member-info.html
@@ -13,11 +13,13 @@
     <h2 th:text="|${session.loginMember.getMemberId()}님|">회원 ID님</h2>
     <h4>어떤 도움이 필요하신가요? :)</h4>
 </section>
-<ul class="myinfo__container">
+<section id="my-info">
+  <ul class="myinfo__container">
         <li class="myinfo__list"><a th:href="@{|/members/${session.loginMember.getMemberNo()}/update|}"><img class="myinfo__icons" src="/images/icons/user.svg"><h4 class="myinfo__text">회원정보 수정</h4></a></li>
         <li class="myinfo__list"><a th:href="@{|/members/${session.loginMember.getMemberNo()}/orders|}"><img class="myinfo__icons" src="/images/icons/order.svg"> <h4 class="myinfo__text">주문목록 조회</h4></a></li>
         <li class="myinfo__list"><a th:href="@{|/members/${session.loginMember.getMemberNo()}/reviews|}"><img class="myinfo__icons" src="/images/icons/review.svg"> <h4 class="myinfo__text">리뷰목록 조회</h4></a></li>
         <li class="myinfo__list"><a th:href="@{|/members/${session.loginMember.getMemberNo()}/qna|}"><img class="myinfo__icons" src="/images/icons/qna.svg"> <h4 class="myinfo__text">나의 질문 조회</h4></a></li>
-</ul>
+  </ul>
+</section>
 </body>
 </html>
