--- a/src/main/resources/templates/qna/member-qna.html
+++ b/src/main/resources/templates/qna/member-qna.html
@@ -51,7 +51,7 @@
         </table>
         <div th:if="${qnaListByPaging.size()} == 0" class="no-dto-comment">질문 내역이 없습니다.</div>
     </div>
-    <div class="qna__page" th:if="${qnaListByPaging.size()} > 0">
+    <div class="items__page" th:if="${qnaListByPaging.size()} > 0">
         <span th:if="${pageSettings.page &lt;= 1}">이전</span>
         <span th:unless="${pageSettings.page &lt;= 1}">
             <a th:href="@{/members/{memberNo}/qna(memberNo=${memberNo},page=${pageSettings.page - 1})}">이전</a>
